2008-02-09  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixSignalTest.cs: Added; tests Mono.Unix.UnixSignal.

2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPathTest.cs: Added; test UnixPath.Combine().

2005-12-07  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: Make test public so that it's actually executed by
	  NUnit; NUnit doesn't like private Test* methods -- rename; test
	  UnixMarshal.PtrToString for a string containing 0 characters (this used to
	  cause an ArgumentOutOfRangeException due to a bug).

2005-12-05  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixUserTest.cs: s/UnixUser/UnixUserInfo/g (UnixUser is obsolete).

2005-12-05  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: s/Free/FreeHeap/g (UnixMarshal.Free will be removed).

2005-11-28  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixGroupTest.cs: The type of UnixGroupInfo.GroupId changed.  UnixGroup is
	  deprecated; use UnixGroupInfo instead.
	* UnixUserTest.cs: The type of UnixUserInfo.UserId changed.  UnixUser if
	  deprecated; use UnixUserInfo instead.

2005-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: s/StringToAlloc/StringToHeap/g (UnixMarshal change).
	* UnixEncodingTest.cs: Deal with UnixEncoding.EscapeByte value change.

2005-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixEncodingTest.cs: Added string/byte[] encoding tests for
	  Mono.Unix.UnixEncoding.

2005-10-17  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: Added string marshaling tests for Mono.Unix.UnixMarshal.

2005-06-29  Miguel de Icaza  <miguel@ximian.com>

	* StdioFileStreamTest.cs: comment out tests that depend on the
	underlying Stdio implementation.

2005-05-21  Ben Maurer  <bmaurer@ximian.com>

	* UnixUserTest.cs, UnixGroupTest.cs: Disable tests that might not
	work on a Solaris box with NIS. Bug #72293.

2005-04-29  Jonathan Pryor  <jonpryor@vt.edu>

	* StdioFileStreamTest.cs: Add FilePosition tests; remove `var = var` 