@@ -1,3 +1,7 @@
+2008-02-12  Zoltan Varga  <vargaz@gmail.com>
+
+	* UnixSignalTest.cs: Fix the build.
+
 2008-02-09  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UnixSignalTest.cs: Added; tests Mono.Unix.UnixSignal.
